[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "servitor"
version = "0.0.1"
authors = [
  { name="Robert McDaniels", email="conscious.code@gmail.com" },
]
description = "Create semantic functions using LLM providers"
readme = "Readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/consciouscode/servito"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.optional-dependencies]
openai = ["openai", "tiktoken"]
gpt4all = ["gpt4all"]